Added custom C++ class to help get tile index values from local position

--- a/GraviPrototype.uproject
+++ b/GraviPrototype.uproject
@@ -2,5 +2,16 @@
 	"FileVersion": 3,
 	"EngineAssociation": "4.15",
 	"Category": "",
-	"Description": ""
+	"Description": "",
+	"Modules": [
+		{
+			"Name": "GraviPrototype",
+			"Type": "Runtime",
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"Engine",
+				"Paper2D"
+			]
+		}
+	]
 }
