Got things to work on IOS.
Changed camera aspect ratio to match portrait mode on IOS.

Fixed textures that weren't NPOT/square which apparently didn't want to render on IOS (see bug UE-21997)

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -13,6 +13,15 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/Engine.RendererSettings]
 r.TranslucentSortPolicy=2
 
+[/Script/IOSRuntimeSettings.IOSRuntimeSettings]
+MobileProvision=GraviPrototype.mobileprovision
+BundleDisplayName=GraviPrototype
+BundleName=GraviPrototype
+BundleIdentifier=GraviPrototype
+RemoteServerName=Billys-MacBook-Pro.local
+RSyncUsername=bclack
+bSupportsPortraitOrientation=True
+
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
 DefaultTerminalVelocity=4000.000000
