--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -64,7 +64,7 @@ DefaultViewportMouseLockMode=LockOnCapture
 +AxisMappings=(AxisName="Move",Key=A,Scale=-1.000000)
 bAlwaysShowTouchInterface=False
 bShowConsoleOnFourFingerTap=True
-DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
+DefaultTouchInterface=None
 ConsoleKey=None
 -ConsoleKeys=Tilde
 +ConsoleKeys=Tilde
